--- a/JSP_Project(Webtoon)/.settings/org.eclipse.wst.common.component
+++ b/JSP_Project(Webtoon)/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JSP_TeamProject">
+    <wb-module deploy-name="JSP_Project(Webtoon)">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="JSP_TeamProject"/>
-        <property name="java-output-path" value="/JSP_TeamProject/build/classes"/>
+        <property name="java-output-path" value="/JSP_Project(Webtoon)/build/classes"/>
+        <property name="context-root" value="JSP_Project(Webtoon)"/>
     </wb-module>
 </project-modules>
